--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@reduxjs/toolkit": "^1.5.1",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
+    "hashmap": "^2.4.0",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.1.0",
-    "ffi": "^2.3.0",
-    "ref": "^1.3.5"
+    "better-sqlite3": "^7.3.1"
   },
   "devDependencies": {
     "socket.io": "^4.1.2"
